Texture preview in brush settings does not update #34209

Closed
opened 2013-02-11 19:29:23 +01:00 by Stanislav Blinov · 6 comments

%%%--- Operating System, Graphics card ---
Ubuntu 12.10 amd 64
NVIDIA GeForce GTS 450 (304.51 driver)

- Blender version with error, and version that worked ---

Version with error: r54435
Version that worked: official 2.65a (r53177)

- Short description of error ---

When setting texture for sculpting brush, no preview is generated for it in Texture sub-panel of sculpt mode toolshelf. No matter what texture is used (built-in procedural or image), preview just stays black.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Open any scene
  2. Enter sculpt mode
  3. Go to Texture sub-panel of sculpt mode toolshelf
  4. Add a texture
    %%%
%%%--- Operating System, Graphics card --- Ubuntu 12.10 amd 64 NVIDIA GeForce GTS 450 (304.51 driver) - Blender version with error, and version that worked --- Version with error: r54435 Version that worked: official 2.65a (r53177) - Short description of error --- When setting texture for sculpting brush, no preview is generated for it in Texture sub-panel of sculpt mode toolshelf. No matter what texture is used (built-in procedural or image), preview just stays black. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Open any scene 2. Enter sculpt mode 3. Go to Texture sub-panel of sculpt mode toolshelf 4. Add a texture %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Confirmed ubuntu, r54478.%%%

%%%Confirmed ubuntu, r54478.%%%

%%%Checking on this.%%%

%%%Checking on this.%%%

%%%Fixed in svn rev54486. Would work now if BI render is used, but if Cycles used no preview would be available. Looking into whether it's possible to support now.%%%

%%%Fixed in svn rev54486. Would work now if BI render is used, but if Cycles used no preview would be available. Looking into whether it's possible to support now.%%%

%%%Looked into remained issue. It's actually an issue of any external engine. Would this is more a TODO and original issue considering solved.

Thanks for the report, closing.%%%

%%%Looked into remained issue. It's actually an issue of any external engine. Would this is more a TODO and original issue considering solved. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34209
No description provided.