Fix #34209: Texture preview in brush settings does not update

Was a regression since Cycles preview implementation.

Texture preview would be fine now if Blender Internal render is used,
but seems it's not impossible to support textures preview if Cycles
is set as render engine.

Would check on this a bit further.